style: fix for bad overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,3 +14,7 @@ a {
 * {
   box-sizing: border-box;
 }
+
+#__next {
+  overflow-x: unset !important;
+}
